--- a/public/themes/Subtech/css/main.css
+++ b/public/themes/Subtech/css/main.css
@@ -1,3 +1,34 @@
 * {
-    color:red;
+    box-sizing: border-box;
+}
+body {
+    padding:0;
+    margin:0;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+
+.main-menu {
+    position: fixed;
+    top:0;
+    width:100%;
+    color:white;
+    z-index: 99999;
+}
+.main-menu .menu {
+    text-align: right;
+}
+.main-menu ul {
+    list-style: none;
+}
+.main-menu ul li {
+    float:left;
+}
+.main-menu ul li a {
+    color:white;
+    font-weight: 200;
+    font-size:18px;
+    padding:10px 10px;
+    display: block;
 }
