--- a/public/themes/Subtech/css/main.css
+++ b/public/themes/Subtech/css/main.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     font-size:16px;
     font-family: 'Lato', sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 .container {
     width:1300px;
@@ -21,8 +22,14 @@ p {
     font-size:16px;
 }
 
-h1, h2, h3, h4, h5, h6, .main-menu a {
+h1, .main-menu a {
     font-family: "Lovelo Black", sans-serif;
+}
+h2 {
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 48px;
+    color: #5B6977;
 }
 
 .logo {
@@ -51,7 +58,7 @@ h1, h2, h3, h4, h5, h6, .main-menu a {
 }
 
 .homePageHeader p {
-    font-weight: 100;
+    font-weight: 300;
     font-size:28px;
     margin-bottom:25px;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.55);
