--- a/public/themes/Subtech/css/main.css
+++ b/public/themes/Subtech/css/main.css
@@ -31,6 +31,12 @@ h2 {
     line-height: 48px;
     color: #5B6977;
 }
+h4 {
+    color: #6E7F90;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+}
 
 .logo {
     width: 230px;
