--- a/public/themes/Subtech/css/main.css
+++ b/public/themes/Subtech/css/main.css
@@ -106,9 +106,14 @@ p{
     padding: 30px 0;
     z-index: 99999;
     border-bottom: 1px solid rgba(255, 255, 255, 0.80);
+    transition: 0.15s all ease-in-out;
+    -webkit-transition: 0.15s all ease-in-out;
+}
+body.scrolled .main-menu {
+    background-color: rgba(29, 35, 45, 0.85);
+    background-image: url(../images/grid.png);
 
 }
-
 .main-menu .menu {
     text-align: right;
 }
@@ -158,12 +163,13 @@ footer ul li a {
     display: block;
 }
 footer .legal {
-    font-weight: 100;
+    font-weight: 300;
     text-align: center;
     font-size: 11px;
-    margin-top:40px;
-    border-top:1px solid rgba(255,255,255,0.55);
-    padding-top:30px;
+    margin-top: 40px;
+    border-top: 1px solid rgba(255,255,255,0.55);
+    padding-top: 30px;
+    color: rgb(255, 255, 255);
 }
 footer .socialButtons {
     text-align: right;
