--- a/public/themes/Subtech/css/main.css
+++ b/public/themes/Subtech/css/main.css
@@ -50,7 +50,7 @@ p{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
-
+    display: block;
 }
 
 .homePageHeader {
